--- a/index.html
+++ b/index.html
@@ -7,7 +7,23 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="mapbox-token" content="pk.eyJ1Ijoib2xhbm9kIiwiYSI6IjdZdV9iTTQifQ.HP-razZKsNmITPgHs4ugIA">
   <title>Map</title>
-  <script type="module" src="map.js" async></script>
+	<script type="module">
+		import { Marker } from './map.js'
+    console.info(`Try loading this page with one or more 'm' query parameters.
+Usage: ?m=<title>;<lng>;<lat>
+`)
+    // demo functionality, show markers taken from the URL query parameters
+    const params = new URL(location).searchParams
+		customElements.whenDefined('d-marker')
+    	.then(() => params.getAll('m').map(m => m.split(';')))
+      .then(mm => mm.map(([title, ...lngLat]) => Object.assign(new Marker, { title, lngLat })))
+			.then(mks => {
+				const map = document.querySelector('d-map')
+				map.append(...mks)
+				const zoom = parseInt(params.get('z'))
+    		if (zoom) map.zoom = zoom
+			})
+	</script>
   <style>
     html, body { margin: 0; padding: 0; height: 100%; }
     :not(:defined) { opacity: 0; }
@@ -17,23 +33,6 @@
 
 <body>
   <d-map z="3"></d-map>
-
-  <script type="module">
-    import { Marker } from './map.js'
-    
-    console.log(`Try loading this page with one or more 'm' query parameters.
-Usage: ?m=<title>;<lng>;<lat>
-`)
-    // demo functionality, show markers taken from the URL query parameters
-    const params = new URL(location).searchParams
-    const markers = params.getAll('m')
-      .map(m => m.split(';'))
-      .map(([title, ...lngLat]) => Object.assign(new Marker, { title, lngLat }))
-    const map = document.querySelector('d-map')
-    map.append(...markers)
-    const zoom = parseInt(params.get('z'))
-    if (zoom) map.zoom = zoom
-  </script>
 </body>
 
 </html>
